feat: configure media paths from admin
